add modules chat
